--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -6,6 +6,7 @@
     <h5 class="card-title"><%= @product.title %></h5>
     <h6 class="card-subtitle mb-2 text-muted"><%= @product.category %></h6>
     <p class="card-text"><%= @product.description %></p>
+    <p class="card-text"><small>Created by</small><%= @product.user.username %></p>
     <a href="#" class="card-link">Buy</a>
     <%= link_to "Edit", edit_product_path %>
   </div>
