--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,15 +1,19 @@
-<nav style="padding: 20px">
- <div class="d-flex justify-content-between">
-   <%= link_to "EPowers", root_path, class: "nav-link" %>
-
-   <div class="nav-links">
-    <% if user_signed_in?  %>
-    <%= link_to current_user.email, edit_user_registration_path %>
-    <%= link_to "Logout", destroy_user_session_path, data: { turbo_method: :delete } %>
-    <% else %>
-    <%= link_to "Login", new_user_session_path %>
-    <%= link_to "Sign Up", new_user_registration_path %>
-    <% end %>
-   </div>
+<nav style="padding:20px" class="bg-warning">
+ <div class="d-flex justify-content-between align-items-center">
+    <%= link_to "e-POWERS ", root_path, class: "icon fs-1 fw-bolder text-danger py-0" %>
+    <div>
+    <i class="fa-sharp fa-solid fa-burst fs-1 text-danger"></i>
+    <i class="fa-solid fa-biohazard fs-1 text-danger"></i>
+    <i class="fa-solid fa-skull-crossbones fs-1 text-danger"></i>
+    </div>
+    <div class="nav-links ">
+      <% if user_signed_in?  %>
+        <%= link_to current_user.username, edit_user_registration_path, class:"btn btn-warning" %>
+        <%= link_to "Logout", destroy_user_session_path, data: { turbo_method: :delete }, class:"btn btn-danger" %>
+      <% else %>
+        <%= link_to "Login", new_user_session_path, class:"btn btn-danger" %>
+        <%= link_to "Sign Up", new_user_registration_path, class:"btn btn-danger" %>
+      <% end %>
+    </div>
  </div>
 </nav>
