added index page layout and card disposition

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,8 @@
   </head>
 
   <body>
-    <div class="container bg-danger px-0 mb-0">
-      <%= render 'shared/navbar' %>
+    <%= render 'shared/navbar' %>
+    <div class="container bg-white px-0 mb-0">
       <%= yield %>
     </div>
     <%= render 'shared/footer' %>
