--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,12 +1,12 @@
-<footer class="container p-3 bg-warning d-flex justify-content-between">
+<footer class="p-3 bg-danger d-flex justify-content-between">
 
-  <div class="footer-copyright icon">
-    This page is made with <i class="fa-solid fa-radiation text-danger"></i> by Le Wagon Students
+  <div class="footer-copyright icon text-warning">
+    This page is made with <i class="fa-solid fa-radiation text-warning"></i> by Le Wagon Students
    </div>
-    <div class="bg warning">
-    <a href="https://github.com/Lenilda-Miranda"><i class="fab fa-github text-danger"></i></a>
-    <a href="https://github.com/gpcmello"><i class="fab fa-github text-danger"></i></a>
-    <a href="https://github.com/FabioWaideman"><i class="fab fa-github text-danger"></i></a>
+    <div class="bg-danger">
+    <a href="https://github.com/Lenilda-Miranda"><i class="fab fa-github text-warning"></i></a>
+    <a href="https://github.com/gpcmello"><i class="fab fa-github text-warning"></i></a>
+    <a href="https://github.com/FabioWaideman"><i class="fab fa-github text-warning"></i></a>
 
   </div>
 </footer>
