--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,18 +1,18 @@
-<nav style="padding:20px" class="bg-warning">
+<nav style="padding:20px" class="bg-danger">
  <div class="d-flex justify-content-between align-items-center">
-    <%= link_to "e-POWERS ", root_path, class: "icon fs-1 fw-bolder text-danger py-0" %>
+    <%= link_to "e-POWERS ", root_path, class: "icon fs-1 fw-bolder text-warning py-0" %>
     <div>
-    <i class="fa-sharp fa-solid fa-burst fs-1 text-danger"></i>
-    <i class="fa-solid fa-biohazard fs-1 text-danger"></i>
-    <i class="fa-solid fa-skull-crossbones fs-1 text-danger"></i>
+    <i class="fa-sharp fa-solid fa-burst fs-1 text-warning"></i>
+    <i class="fa-solid fa-biohazard fs-1 text-warning"></i>
+    <i class="fa-solid fa-skull-crossbones fs-1 text-warning"></i>
     </div>
     <div class="nav-links ">
       <% if user_signed_in?  %>
-        <%= link_to current_user.username, edit_user_registration_path, class:"btn btn-warning" %>
-        <%= link_to "Logout", destroy_user_session_path, data: { turbo_method: :delete }, class:"btn btn-danger" %>
+        <%= link_to current_user.username, edit_user_registration_path, class:"btn btn-danger" %>
+        <%= link_to "Logout", destroy_user_session_path, data: { turbo_method: :delete }, class:"btn btn-warning" %>
       <% else %>
-        <%= link_to "Login", new_user_session_path, class:"btn btn-danger" %>
-        <%= link_to "Sign Up", new_user_registration_path, class:"btn btn-danger" %>
+        <%= link_to "Login", new_user_session_path, class:"btn btn-warning" %>
+        <%= link_to "Sign Up", new_user_registration_path, class:"btn btn-warning" %>
       <% end %>
     </div>
  </div>
