--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,6 +6,8 @@
   <div class="form-inputs">
     <%= f.input :username,
                 required: true %>
+    <%= f.input :full_name,
+                required: true %>
     <%= f.input :email,
                 required: true,
                 autofocus: true,
