--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,7 +8,7 @@
     </div>
     <div class="nav-links ">
       <% if user_signed_in?  %>
-        <%= link_to current_user.username, edit_user_registration_path, class:"btn btn-danger" %>
+        <%= link_to current_user.username, user_path(current_user), class:"btn btn-warning" %>
         <%= link_to "Logout", destroy_user_session_path, data: { turbo_method: :delete }, class:"btn btn-warning" %>
       <% else %>
         <%= link_to "Login", new_user_session_path, class:"btn btn-warning" %>
