--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <nav style="padding:20px" class="bg-danger">
  <div class="d-flex justify-content-between align-items-center">
-    <%= link_to "e-POWERS ", root_path, class: "icon fs-1 fw-bolder text-warning py-0" %>
+    <%= link_to "e-Powers ", root_path, class: "icon fs-1 text-warning py-0" %>
     <div>
     <i class="fa-sharp fa-solid fa-burst fs-1 text-warning"></i>
     <i class="fa-solid fa-biohazard fs-1 text-warning"></i>
