--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -9,5 +9,6 @@
     <p class="card-text"><small>Created by</small><%= @product.user.username %></p>
     <%= link_to "Buy this Power", new_product_order_path(@product) %>
     <%= link_to "Edit", edit_product_path %>
+    <%= link_to "Delete", product_path(@product), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' } %>
   </div>
 </div>
