--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,13 +1,14 @@
 <h1>SuperPower</h1>
 <%= link_to "Back", products_path %>
 
-<div class="card" style="width: 18rem;">
+<div class="product-card">
   <div class="card-body">
     <h5 class="card-title"><%= @product.title %></h5>
     <h6 class="card-subtitle mb-2 text-muted"><%= @product.category %></h6>
     <p class="card-text"><%= @product.description %></p>
     <p class="card-text"><small>Created by</small><%= @product.user.username %></p>
-    <a href="#" class="card-link">Buy</a>
-    <%= link_to "Edit", edit_product_path %>
+    <%= link_to "Buy", "#", class: "btn btn-primary" %>
+    <%= link_to "Edit", edit_product_path(@product), class: "btn btn-secondary" %>
+    <%= button_to "Delete", product_path(@product), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger" if current_user == @product.user %>
   </div>
 </div>
