added product images & index/show cards layout

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -3,5 +3,6 @@
   <%= f.input :description %>
   <%= f.input :category %>
   <%= f.input :price %>
+  <%= f.input :photo, as: :file %>
   <%= f.submit %>
 <% end %>
