--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,14 +1,17 @@
 <h1>SuperPower</h1>
 <%= link_to "Back", products_path %>
 
-<div class="card" style="width: 18rem;">
-  <div class="card-body">
+<div class="card" style="width: 19rem;">
+  <div class="card-body d-flex flex-wrap">
     <h5 class="card-title"><%= @product.title %></h5>
+    <%= cl_image_tag @product.photo.key, height: 300, width: 400, crop: :fit, class: "img-fluid mb-2" %>
     <h6 class="card-subtitle mb-2 text-muted"><%= @product.category %></h6>
     <p class="card-text"><%= @product.description %></p>
     <p class="card-text"><small>Created by</small><%= @product.user.username %></p>
-    <%= link_to "Buy this Power", new_product_order_path(@product) %>
-    <%= link_to "Edit", edit_product_path %>
-    <%= link_to "Delete", product_path(@product), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' } %>
+    <div class="d-flex flex-wrap">
+      <%= link_to "Buy this Power", new_product_order_path(@product), class: "btn btn-danger mr-2" %>
+      <%= link_to "Edit", edit_product_path, class: "btn btn-danger mr-2 mx-1" %>
+      <%= link_to "Delete", product_path(@product), class: "btn btn-danger", data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' } %>
+    </div>
   </div>
 </div>
