--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,5 +1,5 @@
 <h1>SuperPower</h1>
-<%= link_to "Back", products_path, class:"btn btn-danger mb-3" %>
+<%= link_to "Back", products_path, class:"btn btn-danger btn-sm mb-3" %>
 
 
 <div class="card" style="width: 19rem;">
@@ -24,6 +24,6 @@
           <%= link_to "Buy this Power", new_product_order_path(@product), class: "btn btn-danger" %>
         </div>
       <% end %>
-    </div>  
+    </div>
   </div>
 </div>
