--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -33,4 +33,4 @@
 
 <div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), class: "btn btn-danger mb-3", data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
 
-<%= link_to "Back", :back, class: "btn btn-danger mb-3" %>
+<%= link_to "Back", :back, class: "btn btn-danger btn-sm mb-3" %>
