--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -4,5 +4,5 @@
   <%= f.input :category %>
   <%= f.input :price %>
   <%= f.input :photo, as: :file %>
-  <%= f.submit %>
+  <%= f.submit class: "btn btn-danger mb-3" %>
 <% end %>
