--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 
-<%= link_to "Back", products_path %>
+<%= link_to "Back", products_path, class:"btn btn-danger btn-sm mb-3" %>
