--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,5 +1,5 @@
 <h1>SuperPower</h1>
-<%= link_to "Back", products_path, class:"btn btn-danger btn-sm mb-3" %>
+<%= link_to "Back", products_path, class:"btn btn-danger mb-3" %>
 
 
 <div class="card" style="width: 19rem;">
