--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,6 +8,9 @@
     </div>
     <div class="nav-links ">
       <% if user_signed_in?  %>
+        <% if current_user.avatar.present? %>
+        <%= cl_image_tag(current_user.avatar.key, transformation: [{ width: 30, height: 30, crop: :thumb, gravity: :face, radius: :max }], class: "avatar rounded-circle") %>
+      <% end %>
         <%= link_to current_user.username, user_path(current_user), class:"btn btn-warning" %>
         <%= link_to "Logout", destroy_user_session_path, data: { turbo_method: :delete }, class:"btn btn-warning" %>
       <% else %>
