--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -15,7 +15,7 @@
 <% end %>
 
 
-<div class="d-flex m-3">
+<div class="d-flex flex-wrap m-3">
   <% @products.each do |product| %>
   <div class="card m-2 border-danger" style="width: 15rem;">
     <%= cl_image_tag product.photo.key, height: 200, width: 300, crop: :fit, class: "card-img-top" %>
